# auto_assign

./: .env.example  .gitignore  README.md  REPO_CONTEXT.md  alembic.ini  app.py  config.yaml  pyproject.toml
.streamlit/: config.toml
alembic/: README  env.py
alembic/versions/: 7d8e9f10a1b2_profile_only_technicians.py  a1c2b3d4e5f6_remove_hardcoded_task_seeds.py  b76286bc7620_initial_technicians_assignments.py  (+5 more)
data/: sample_schedule.csv  sample_tech_profiles.csv
docs/: README.md  architecture_overview.md  assignment_algorithm.md  assignment_persistence_feature_summary.md  csv_contract.md  deployment.md  greedy_scoring_paired_benchmark_report.md  greedy_scoring_policy_and_simulation.md  operator_runbook.md  persistence_database.md  proficiency_rubric.md  seed_demo_data.md  technician_profiles_ingestion.md
scripts/: run_greedy_simulation.py  seed_demo_data.py
tests/: conftest.py  test_assignment_repository.py  test_db_adapters.py  test_db_assignment_record.py  test_db_session.py  test_db_technician.py  test_demo_seed.py  test_get_available_dates.py  test_get_available_techs.py  test_greedy_assignment.py  test_headcount_distribution.py  test_local_swap_pinning.py  test_manual_override_eligibility.py  test_manual_overrides_helpers.py  test_normalize_schedule.py  test_override_repository.py  test_parse_schedule.py  test_parse_tech_profiles.py  test_scheduling_repository.py  test_task_repository.py  test_tech_import_plan.py  test_tech_repository.py  test_tech_repository_delete.py  test_tech_repository_merge_scenarios.py  test_validate_schedule.py
(+77 files in other folders)
